feat: Estender modelo de tickets com classificações avançadas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -800,6 +800,8 @@
                             <th>Solicitante</th>
                             <th>Prioridade</th>
                             <th>Status</th>
+                            <th>Categoria</th>
+                            <th>SLA alvo</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -809,6 +811,8 @@
                             <td>Maria Silva</td>
                             <td><span class="tag danger">Alta</span></td>
                             <td><span class="tag warning">Em andamento</span></td>
+                            <td>Infraestrutura e redes</td>
+                            <td>11/10 • 09:30</td>
                         </tr>
                         <tr>
                             <td>1018</td>
@@ -816,6 +820,8 @@
                             <td>Carlos Souza</td>
                             <td><span class="tag medium">Média</span></td>
                             <td><span class="tag info">Aguardando usuário</span></td>
+                            <td>Suporte ao usuário</td>
+                            <td>12/10 • 14:00</td>
                         </tr>
                         <tr>
                             <td>1011</td>
@@ -823,6 +829,8 @@
                             <td>Ana Paula</td>
                             <td><span class="tag danger">Alta</span></td>
                             <td><span class="tag success">Resolvido</span></td>
+                            <td>Aplicações</td>
+                            <td>10/10 • 10:00</td>
                         </tr>
                         </tbody>
                     </table>
